@@ -1,0 +1,5 @@
+# This is a hack, until someone autoconfiscates jikespg, so that you can
+# call make from the top-level directory.
+
+all:
+	cd src && ${MAKE}
